more stack problems